# roundhouse

./: .dockerignore  .env.example  .gitignore  CNAME  Dockerfile  LICENSE  README.md  build-docs.mjs  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.swarm.yml  docker-compose.yml  docker-stack-lab.yml  docker-stack.langflow.yml  docker-stack.override.example.yml  docker-stack.tls.override.yml  docker-stack.yml
api/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  composer.json  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2a69b275d501_baseline.py  b7e1c0a4d2f8_request_events.py  c3d2f1a8e9b4_servers_and_assets.py  (+3 more)
api/app/: audit.py  auth.py  cleanup.py  config.py  crypto.py  db.py  deps.py  diagnose_secrets.py  laravel_crypto.py  logbook.py  main.py  models.py  platform_settings.py  schema_audit.py
api/bootstrap/: app.php
api/config/: mcp.php
api/docker/: default.conf  dev-entrypoint.sh  entrypoint.sh  nginx.conf  php-fpm.conf  supervisord.conf
api/routes/: api.php
api/tests/: conftest.py  test_backup.py  test_base_registry.py  test_bundle.py  test_codegen_runtime.py  test_codegen_unified.py  test_discovery.py  test_docker_network.py  test_docker_placement.py  test_effective_env.py  test_kubernetes_client.py  test_log_events.py  test_mcp_client.py  test_oauth_as.py  test_oidc.py  test_registry_scan.py  test_remote_routes.py  test_role_mappings_builtin.py  test_sidecar_proxy.py  test_sso.py  test_sso_config.py  test_store_assets.py  test_tls_cert.py  test_token_plaintext.py  test_users.py
(+280 files in other folders)
